--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
 
 <!-- ======== Script ========================= -->
 	<script src="https://code.jquery.com/jquery-3.6.1.min.js" defer></script>
-	<script src="js/gsap.min.js" defer></script>
-	<script src="js/ScrollTrigger.min.js" defer></script>
-	<script src="js/ScrollSmoother.min.js" defer></script>
 	<script src="js/slick.min.js" defer></script>
 	<script src="js/script.js" defer></script>
 
@@ -52,12 +49,6 @@
 						<a href="index.html" class="header__logo">
 							Fomenko
 						</a>
-
-						<!-- <div class="header__lang">
-							<a href="index-ua.html" class="lang__link lang__link-ua">UA</a>
-							<span>/</span>
-							<a href="index.html" class="lang__link lang__link-en">EN</a>
-						</div> -->
 
 			<!-- ======== Header burger	 ======================== -->
 						<div class="header__burger">
@@ -102,7 +93,7 @@
 								<div class="home__text">Welcome to my portfolio.</div>
 							</div>
 							<div class="home__image">
-								<img src="img/bg-home.webp" alt="portfolio image" class="home__img img">
+								<img src="img/bg-home.png" alt="portfolio image" class="home__img img">
 							</div>
 						</div>
 					</div>
@@ -176,52 +167,52 @@
 
 									<div class="works__item">
 										<a href="https://dimafomaa.github.io/mujo/" class="works__link" target="_blank">
-											<img src="img/works/mujo.webp" alt="website" class="works__img">
+											<img src="img/works/jpg/mujo.jpg" alt="website" class="works__img">
 										</a>
 										<div class="works__text works__text--five">MUJO - coffee alternative</div>
 									</div>
 
 									<div class="works__item">
 										<a href="https://dimafomaa.github.io/app/" class="works__link" target="_blank">
-											<img src="img/works/app.webp" alt="website" class="works__img">
+											<img src="img/works/jpg/app.jpg" alt="website" class="works__img">
 										</a>
 										<div class="works__text works__text--five">Papper App - app website</div>
 									</div>
 
 									<div class="works__item">
 										<a href="https://dimafomaa.github.io/d.food/" class="works__link" target="_blank">
-											<img src="img/works/d.food.webp" alt="website" class="works__img">
+											<img src="img/works/jpg/d.food.jpg" alt="website" class="works__img">
 										</a>
 										<div class="works__text works__text--five">Delicious food - is waiting for you</div>
 									</div>
 
 									<div class="works__item">
 										<a href="https://dimafomaa.github.io/food/" class="works__link" target="_blank">
-											<img src="img/works/food.webp" alt="website" class="works__img">
+											<img src="img/works/jpg/food.jpg" alt="website" class="works__img">
 										</a>
 										<div class="works__text works__text--five">Foodhub - tasty food</div>
 									</div>
 									<div class="works__item">
 										<a href="https://dimafomaa.github.io/coffee/" class="works__link" target="_blank">
-											<img src="img/works/coffee.webp" alt="website" class="works__img">
+											<img src="img/works/jpg/coffee.jpg" alt="website" class="works__img">
 										</a>
 										<div class="works__text">Revo - personalzed coffee</div>
 									</div>
 									<div class="works__item">
 										<a href="https://dimafomaa.github.io/4ood/" class="works__link" target="_blank">
-											<img src="img/works/4ood.webp" alt="website" class="works__img">
+											<img src="img/works/jpg/4ood.jpg" alt="website" class="works__img">
 										</a>
 										<div class="works__text">4ood - vitamin complex</div>
 									</div>
 									<div class="works__item">
 										<a href="https://dimafomaa.github.io/Oil/" class="works__link" target="_blank">
-											<img src="img/works/oil.webp" alt="website" class="works__img">
+											<img src="img/works/jpg/oil.jpg" alt="website" class="works__img">
 										</a>
 										<div class="works__text">R.Olio - cooking oil</div>
 									</div>
 									<div class="works__item">
 										<a href="https://dimafomaa.github.io/himo/" class="works__link" target="_blank">
-											<img src="img/works/himo.webp" alt="website" class="works__img">
+											<img src="img/works/jpg/himo.jpg" alt="website" class="works__img">
 										</a>
 										<div class="works__text">Himo - electric bike</div>
 									</div>
@@ -231,8 +222,14 @@
 								<div class="works__body" id="page">
 
 									<div class="works__item">
+										<a href="https://dimafomaa.github.io/bike_lamare" class="works__link" target="_blank">
+											<img src="img/works/jpg/bike.jpg" alt="website" class="works__img">
+										</a>
+										<div class="works__text works__text--six">Lamare - cycles</div>
+									</div>
+									<div class="works__item">
 										<a href="https://dimafomaa.github.io/world" class="works__link" target="_blank">
-											<img src="img/works/world.webp" alt="website" class="works__img">
+											<img src="img/works/jpg/world.jpg" alt="website" class="works__img">
 										</a>
 										<div class="works__text works__text--six">World - forest day</div>
 									</div>
@@ -243,7 +240,7 @@
 
 									<div class="works__item">
 										<a href="https://dimafomaa.github.io/flex-cards/" class="works__link" target="_blank">
-											<img src="img/works/slider.webp" alt="website" class="works__img">
+											<img src="img/works/jpg/slider.jpg" alt="website" class="works__img">
 										</a>
 										<div class="works__text works__text--five">Slider - card slider</div>
 									</div>
@@ -269,6 +266,19 @@
 
 						<div class="video__inner slider">
 
+							<div class="video__column">
+								<div class="video__item">
+
+									<picture class="pic">
+										<source srcset="https://img.youtube.com/vi_webp/iIEW2pg1a18/maxresdefault.webp" type="image/">
+										<img src="https://img.youtube.com/vi/iIEW2pg1a18/maxresdefault.jpg" alt="video youtube" class="video__item-content">
+									</picture>
+
+									<button class="video__item-btn" data-video-ID="iIEW2pg1a18">
+										<svg xmlns="http://www.w3.org/2000/svg" width="64" height="64"><path d="M62.603 16.596a8.06 8.06 0 0 0-5.669-5.669C51.964 9.57 31.96 9.57 31.96 9.57s-20.005.04-24.976 1.397a8.06 8.06 0 0 0-5.669 5.669C0 21.607 0 32 0 32s0 10.393 1.356 15.404a8.06 8.06 0 0 0 5.669 5.669C11.995 54.43 32 54.43 32 54.43s20.005 0 24.976-1.356a8.06 8.06 0 0 0 5.669-5.669C64 42.434 64 32 64 32s-.04-10.393-1.397-15.404z" fill="red"/><path d="M25.592 41.612L42.187 32l-16.596-9.612z" fill="#fff"/></svg>
+									</button>
+								</div>
+							</div>
 							<div class="video__column">
 								<div class="video__item">
 
@@ -387,7 +397,7 @@
 						</div>
 					</div>
 				</section>
-		
+
 			</main>
 
 			<!-- ======== Footer ========================= -->
