--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<meta name="description" content="Создание сайтов в интернете, сайт портфолио Dmytro Fomenko">
+	<meta name="description" content=""Creation of websites on the Internet, portfolio Dmytro Fomenko">
 	<meta name="keywords" content="frontend, portfolio, work, video, website, фронтенд, работы, видео, сайты, лендинг, визитки, программирование, верстка">
 	<meta name="Author" content="Dmytro Fomenko">
 	<meta name="Copyright" content="dimafomaa">
@@ -46,7 +46,7 @@
 			<header class="header">
 				<div class="container">
 					<div class="header__inner">
-						<a href="index.html" class="header__logo">
+						<a href="/" class="header__logo">
 							Fomenko
 						</a>
 
@@ -166,6 +166,41 @@
 								<div class="works__body" id="web">
 
 									<div class="works__item">
+										<a href="https://dimafomaa.github.io/transportation/" class="works__link" target="_blank">
+											<img src="img/works/jpg/trans.jpg" alt="website" class="works__img">
+										</a>
+										<div class="works__text works__text--five">House transportation</div>
+									</div>
+
+									<div class="works__item">
+										<a href="http://holst.pechatnik.in.ua" class="works__link" target="_blank">
+											<img src="img/works/jpg/print.jpg" alt="website" class="works__img">
+										</a>
+										<div class="works__text works__text--five">Pechatnik - Print on canvas</div>
+									</div>
+
+                                    <div class="works__item">
+										<a href="https://dimafomaa.github.io/profi" class="works__link" target="_blank">
+											<img src="img/works/jpg/profi.jpg" alt="website" class="works__img">
+										</a>
+										<div class="works__text works__text--five">IBKProfi - Construction</div>
+									</div>
+
+									<div class="works__item">
+										<a href="https://spotium360.com" class="works__link" target="_blank">
+											<img src="img/works/jpg/spotium.jpg" alt="website" class="works__img">
+										</a>
+										<div class="works__text works__text--five">Spotium - 3D/AR/VR software</div>
+									</div>
+
+									<div class="works__item">
+										<a href="https://www.zavodmk-ua.com/" class="works__link" target="_blank">
+											<img src="img/works/jpg/house.jpg" alt="website" class="works__img">
+										</a>
+										<div class="works__text works__text--five">House - Modular house</div>
+									</div>
+
+									<div class="works__item">
 										<a href="https://dimafomaa.github.io/mujo/" class="works__link" target="_blank">
 											<img src="img/works/jpg/mujo.jpg" alt="website" class="works__img">
 										</a>
@@ -204,12 +239,12 @@
 										</a>
 										<div class="works__text">4ood - vitamin complex</div>
 									</div>
-									<div class="works__item">
+									<!-- <div class="works__item">
 										<a href="https://dimafomaa.github.io/Oil/" class="works__link" target="_blank">
 											<img src="img/works/jpg/oil.jpg" alt="website" class="works__img">
 										</a>
 										<div class="works__text">R.Olio - cooking oil</div>
-									</div>
+									</div> -->
 									<div class="works__item">
 										<a href="https://dimafomaa.github.io/himo/" class="works__link" target="_blank">
 											<img src="img/works/jpg/himo.jpg" alt="website" class="works__img">
@@ -237,6 +272,13 @@
 								</div>
 
 								<div class="works__body" id="other">
+
+									<div class="works__item">
+										<a href="https://dimafomaa.github.io/form/" class="works__link" target="_blank">
+											<img src="img/works/jpg/form.jpg" alt="website" class="works__img">
+										</a>
+										<div class="works__text works__text--five">Form - data submission</div>
+									</div>
 
 									<div class="works__item">
 										<a href="https://dimafomaa.github.io/flex-cards/" class="works__link" target="_blank">
@@ -398,6 +440,7 @@
 					</div>
 				</section>
 
+				
 			</main>
 
 			<!-- ======== Footer ========================= -->
