--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 							<div class="works__content">
 
-								<div class="works__body" id="web">
+								<div class="works__body slider" id="web">
 
 									<div class="works__item">
 										<a href="https://dimafomaa.github.io/transportation/" class="works__link" target="_blank">
@@ -171,56 +171,49 @@
 										</a>
 										<div class="works__text works__text--five">House transportation</div>
 									</div>
-
 									<div class="works__item">
 										<a href="http://holst.pechatnik.in.ua" class="works__link" target="_blank">
 											<img src="img/works/jpg/print.jpg" alt="website" class="works__img">
 										</a>
 										<div class="works__text works__text--five">Pechatnik - Print on canvas</div>
 									</div>
-
-                                    <div class="works__item">
+									
+									<div class="works__item">
 										<a href="https://dimafomaa.github.io/profi" class="works__link" target="_blank">
 											<img src="img/works/jpg/profi.jpg" alt="website" class="works__img">
 										</a>
 										<div class="works__text works__text--five">IBKProfi - Construction</div>
 									</div>
-
 									<div class="works__item">
 										<a href="https://spotium360.com" class="works__link" target="_blank">
 											<img src="img/works/jpg/spotium.jpg" alt="website" class="works__img">
 										</a>
 										<div class="works__text works__text--five">Spotium - 3D/AR/VR software</div>
 									</div>
-
 									<div class="works__item">
 										<a href="https://www.zavodmk-ua.com/" class="works__link" target="_blank">
 											<img src="img/works/jpg/house.jpg" alt="website" class="works__img">
 										</a>
 										<div class="works__text works__text--five">House - Modular house</div>
 									</div>
-
 									<div class="works__item">
 										<a href="https://dimafomaa.github.io/mujo/" class="works__link" target="_blank">
 											<img src="img/works/jpg/mujo.jpg" alt="website" class="works__img">
 										</a>
 										<div class="works__text works__text--five">MUJO - coffee alternative</div>
 									</div>
-
 									<div class="works__item">
 										<a href="https://dimafomaa.github.io/app/" class="works__link" target="_blank">
 											<img src="img/works/jpg/app.jpg" alt="website" class="works__img">
 										</a>
 										<div class="works__text works__text--five">Papper App - app website</div>
 									</div>
-
 									<div class="works__item">
 										<a href="https://dimafomaa.github.io/d.food/" class="works__link" target="_blank">
 											<img src="img/works/jpg/d.food.jpg" alt="website" class="works__img">
 										</a>
 										<div class="works__text works__text--five">Delicious food - is waiting for you</div>
 									</div>
-
 									<div class="works__item">
 										<a href="https://dimafomaa.github.io/food/" class="works__link" target="_blank">
 											<img src="img/works/jpg/food.jpg" alt="website" class="works__img">
@@ -279,7 +272,6 @@
 										</a>
 										<div class="works__text works__text--five">Form - data submission</div>
 									</div>
-
 									<div class="works__item">
 										<a href="https://dimafomaa.github.io/flex-cards/" class="works__link" target="_blank">
 											<img src="img/works/jpg/slider.jpg" alt="website" class="works__img">
@@ -293,9 +285,6 @@
 
 						</div>
 
-						<!-- <div class="works__button">
-							<a href="#" class="works__btn btn" id="loadMore">Load more</a>
-						</div> -->
 
 					</div>
 				</section>
